--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-869.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20722, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-505.0KB/s(Youtube:不良林), server: 81.90.190.218, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-718.9KB/s(Youtube:不良林), server: 81.90.190.218, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-822.4KB/s(Youtube:不良林), server: 81.90.190.218, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-886.9KB/s(Youtube:不良林), server: 81.90.190.218, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-814.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-516.2KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1012.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-869.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-718.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-886.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-814.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
