--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20723, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-13.24MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.82MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1012.0KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.30MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-182.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1006.2KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-384.6KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-516.2KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-555.1KB/s(Youtube:不良林), server: 81.90.190.218, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1012.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-437.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
+      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
