--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-182.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1006.2KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-384.6KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-516.2KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-555.1KB/s(Youtube:不良林), server: 81.90.190.218, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇬🇧 英国-956.9KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-867.4KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇯🇵 日本-195.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-339.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-182.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1006.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-384.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-516.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-555.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-178.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-956.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.4KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.24MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-195.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-339.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
